# SpendLens

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
data/: rules.yaml
data/samples/: itau_sample.csv  nubank_sample.csv
src/classifiers/: rule_classifier.py
src/extractors/: generic.py
src/loaders/: transaction.py
src/spendlens/classifiers/: __init__.py  rule_classifier.py
src/spendlens/cli/: ingest.py  interactive.py  main.py  report.py
src/spendlens/extractors/: __init__.py  base_extractor.py  itau.py  nubank.py
src/spendlens/loaders/: __init__.py  schemas.py  transaction.py
src/spendlens/queries/: __init__.py  analytics.py
src/spendlens/queries/sql/: month_largest_balance_variation.sql  moving_average_3months.sql  top5_largest_expenses.sql  total_by_category_month.sql
src/spendlens/reporters/: __init__.py  csv_reporter.py  markdown_reporter.py  report_service.py
src/spendlens/transformers/: __init__.py  itau.py  nubank.py
src/transformers/: base_transformer.py
tests/: conftest.py  test_analytics.py  test_classifiers.py  test_cli.py  test_extractors.py  test_loaders.py  test_reporters.py  test_transformers.py
