[project]
name = "spendlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "chardet>=5.2.0",
]

[project.scripts]
spendlens = "spendlens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
